# nntrospect

./: .gitignore  .gitmodules  README.md  pyproject.toml  requirements.txt
data/cache/ai2_arc/ARC-Challenge/0.0.0/210d026faf9955653af8916fad021475a3f00453/: dataset_info.json
data/cache/cais___mmlu/high_school_mathematics/0.0.0/c30699e8356da336a370243923dbaf21066bb9fe/: dataset_info.json
data/cache/openbookqa/main/0.0.0/388097ea7776314e93a529163e0fea805b8a6454/: dataset_info.json
nntrospect/: __init__.py
nntrospect.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
nntrospect/biases/: __init__.py  biases.py
nntrospect/dataset/: __init__.py  loaders.py  utils.py
nntrospect/evaluation/: __init__.py  evals.py
nntrospect/steering/: __init__.py  analysis.py  hooks.py  logger.py
notebooks/: bias_exploration.ipynb  control_vector_test.ipynb  data_preprocessing_test.ipynb  introspection.ipynb  pipeline_test.ipynb  unfaithful_cot.ipynb
