[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "nntrospect"
version = "0.1.0"
description = "Tools for studying LLM introspection and control vectors"
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["."]
include = ["nntrospect*"]
